Update icons and fix layout bug.

--- a/less/style.less
+++ b/less/style.less
@@ -53,6 +53,7 @@
 
 .section{
 	padding-top: 64px;
+	padding-bottom: 32px;
 }
 
 /******************************************/
